--- a/Excel.Extension/Excel.Extension.csproj
+++ b/Excel.Extension/Excel.Extension.csproj
@@ -106,6 +106,7 @@
   -->
   <ItemGroup>
     <Reference Include="Accessibility" />
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -168,6 +169,7 @@
       <DependentUpon>FrmDBSourceSetting.cs</DependentUpon>
     </Compile>
     <Compile Include="IDBHelper.cs" />
+    <Compile Include="MouseHookWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
