--- a/Excel.Extension/App.config
+++ b/Excel.Extension/App.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
+    <add name="mssql237" connectionString="data source=111.230.87.237;initial catalog=StockOnline;user id=ceshi;password=zlgw@2018" providerName="mssql"/>
     </connectionStrings>
 </configuration>
