--- a/Excel.Extension/Excel.Extension.csproj
+++ b/Excel.Extension/Excel.Extension.csproj
@@ -156,6 +156,10 @@
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.VisualStudio.Tools.Applications.Runtime, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.Data.6.9.12\lib\net40\MySql.Data.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Office, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
@@ -193,22 +197,22 @@
     can be found.
   -->
   <ItemGroup>
-    <Compile Include="DBHelperMssql.cs" />
+    <Compile Include="DbHandlerMysql.cs" />
+    <Compile Include="DbHandlerMssqlserver.cs" />
     <Compile Include="DbIndex.cs" />
-    <Compile Include="Views\FrmDBSourceAdd.cs">
+    <Compile Include="Views\DBSourceAdd.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\FrmDBSourceAdd.Designer.cs">
-      <DependentUpon>FrmDBSourceAdd.cs</DependentUpon>
+    <Compile Include="Views\DBSourceAdd.Designer.cs">
+      <DependentUpon>DBSourceAdd.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\FrmDBSourceSetting.cs">
+    <Compile Include="Views\DBSourceSetting.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\FrmDBSourceSetting.Designer.cs">
-      <DependentUpon>FrmDBSourceSetting.cs</DependentUpon>
+    <Compile Include="Views\DBSourceSetting.Designer.cs">
+      <DependentUpon>DBSourceSetting.cs</DependentUpon>
     </Compile>
     <Compile Include="IDbHandler.cs" />
-    <Compile Include="MouseHookWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -218,11 +222,17 @@
     <Compile Include="ToolBar.Designer.cs">
       <DependentUpon>ToolBar.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Views\FrmDBSourceAdd.resx">
-      <DependentUpon>FrmDBSourceAdd.cs</DependentUpon>
+    <Compile Include="Views\ProcessDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ProcessDashboard.Designer.cs">
+      <DependentUpon>ProcessDashboard.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Views\DBSourceAdd.resx">
+      <DependentUpon>DBSourceAdd.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\FrmDBSourceSetting.resx">
-      <DependentUpon>FrmDBSourceSetting.cs</DependentUpon>
+    <EmbeddedResource Include="Views\DBSourceSetting.resx">
+      <DependentUpon>DBSourceSetting.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -237,10 +247,14 @@
     <EmbeddedResource Include="ToolBar.resx">
       <DependentUpon>ToolBar.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\ProcessDashboard.resx">
+      <DependentUpon>ProcessDashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
     <None Include="Excel.DBHelper_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
