--- a/Excel.Extension/Excel.Extension.csproj
+++ b/Excel.Extension/Excel.Extension.csproj
@@ -254,7 +254,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Excel.DBHelper_TemporaryKey.pfx" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
