--- a/Excel.DbTool/app.config
+++ b/Excel.DbTool/app.config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name="mssql237" connectionString="data source=111.230.87.237;initial catalog=StockOnline;user id=ceshi;password=zlgw@2018" providerName="mssql" />
-    <add name="mysql201" connectionString="data source=192.168.6.201;initial catalog=stockonline;user id=root;password=111111" providerName="mysql" />
-    </connectionStrings>
-<system.data>
+  <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+</configuration>
