增加右键功能

--- a/Excel.DbTool/Excel.DbTool.csproj
+++ b/Excel.DbTool/Excel.DbTool.csproj
@@ -183,6 +183,7 @@
   -->
   <ItemGroup>
     <Compile Include="ColumnMeta.cs" />
+    <Compile Include="Constraints.cs" />
     <Compile Include="DbCategory.cs" />
     <Compile Include="ITableManager.cs" />
     <Compile Include="MssqlserverTableManager.cs" />
