--- a/Excel.DbTool/app.config
+++ b/Excel.DbTool/app.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    
+    <remove name="localSqlserver"/>
+    <add name="loacldb" providerName="mssql" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=hz0612;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
