--- a/Excel.DbTool/app.config
+++ b/Excel.DbTool/app.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <remove name="localSqlserver"/>
-    <add name="loacldb" providerName="mssql" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=hz0612;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
+    <add name="loacldb" providerName="mssqlserver" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=hz0612;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
