--- a/aclib/aclib.vcxproj
+++ b/aclib/aclib.vcxproj
@@ -13,9 +13,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{C6C34CB1-26A1-4D81-BADB-CFB69817A036}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>NativeC</RootNamespace>
+    <RootNamespace>aclib</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
-    <ProjectName>Fw.Native</ProjectName>
+    <ProjectName>aclib</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
