--- a/Azeroth.ExcelFunction/TenpowerExcelFunction.csproj
+++ b/Azeroth.ExcelFunction/TenpowerExcelFunction.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{BCA923A0-B356-4960-863D-417B3718F1E6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Azeroth.ExcelFunction</RootNamespace>
-    <AssemblyName>Azeroth.ExcelFunction</AssemblyName>
+    <RootNamespace>TenpowerExcelFunction</RootNamespace>
+    <AssemblyName>TenpowerExcelFunction</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
