--- a/ExcelUFD/ExcelUFD.csproj
+++ b/ExcelUFD/ExcelUFD.csproj
@@ -46,7 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IO.cs" />
+    <Compile Include="IRtdS1Handler.cs" />
+    <Compile Include="LockedQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RtdContext.cs" />
+    <Compile Include="RtdS1.cs" />
     <Compile Include="Text.cs" />
   </ItemGroup>
   <ItemGroup>
