--- a/VclibInvoke/VclibInvoke.csproj
+++ b/VclibInvoke/VclibInvoke.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{CAD59DEE-C8D8-4CEA-9607-7FE3DD7D3017}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Azeroth.Core.PInvoke</RootNamespace>
-    <AssemblyName>Azeroth.Core.PInvoke</AssemblyName>
+    <RootNamespace>VclibInvoke</RootNamespace>
+    <AssemblyName>VclibInvoke</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PublishUrl>publish\</PublishUrl>
@@ -77,7 +77,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="readme.txt" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
