--- a/GodTask/GodTask.csproj
+++ b/GodTask/GodTask.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{121ADDD4-0408-4389-8908-C38A41582F4B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TAP</RootNamespace>
-    <AssemblyName>TAP</AssemblyName>
+    <RootNamespace>GodTask</RootNamespace>
+    <AssemblyName>GodTask</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
