--- a/AkWindowsService/AkWindowsService.csproj
+++ b/AkWindowsService/AkWindowsService.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.ServiceProcess" />
