--- a/AkWindowsService/AkWindowsService.csproj
+++ b/AkWindowsService/AkWindowsService.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="README.md" />
+    <None Include="windows服务启动winform程序.pdf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
