自包含安装和卸载功能,也可以控制台直接运行

--- a/AkWindowsService/App.config
+++ b/AkWindowsService/App.config
@@ -17,4 +17,8 @@
       </endpointBehaviors>
     </behaviors>
   </system.serviceModel>
+  <appSettings>
+    <add key="P1Service:ServiceName" value="P1Serveice"/>
+    <add key="P1Service:Description" value="P1Serveice的描述"/>
+  </appSettings>
 </configuration>
