--- a/BouncyCastleCrypto/BouncyCastleCrypto.csproj
+++ b/BouncyCastleCrypto/BouncyCastleCrypto.csproj
@@ -45,8 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EncryptInputGPG.cs" />
-    <Compile Include="GPG.cs" />
+    <Compile Include="GpgKeyPair.cs" />
+    <Compile Include="GpgEncryptSignCfg.cs" />
+    <Compile Include="GpgUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
