--- a/HzTalk/HzTalk.csproj
+++ b/HzTalk/HzTalk.csproj
@@ -59,6 +59,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChatInfo.cs" />
+    <Compile Include="ChatList.cs" />
     <Compile Include="RootData.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
